--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -1621,6 +1621,42 @@ button.is-emby-button emby-button {
   text-align: center;
 }
 
+.layout-desktop #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button,
+.layout-tv #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button {
+  width: calc(2.5vw + 32vh);
+  margin-left: 0 !important;
+  margin-bottom: 0.5em !important;
+  border-radius: var(--rounding) !important;
+  background-color: rgba(var(--tint2), 0.3) !important;
+  transition: background 0.3s ease;
+  display: flex !important;
+  justify-content: center;
+  transition: background-color 0.3s ease-out 0s;
+}
+
+.layout-desktop #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button:hover,
+.layout-tv #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button:hover {
+  transition: background-color 0.3s ease-out 0s;
+  background-color: rgba(var(--tint2), 0.6) !important;
+  transition: background 0.3s ease;
+  display: flex !important;
+  justify-content: center;
+}
+
+@media (min-width: 50em) {
+  .layout-desktop .readOnlyContent, form,
+  .layout-tv .readOnlyContent, form {
+    max-width: calc(8.5vw + 32vh);
+    background: rgba(var(--tint2), 0.1);
+    border-radius: var(--rounding);
+  }
+}
+
+#myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItem:hover {
+  background: transparent;
+  box-shadow: none;
+}
+
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBodyText {
   text-align: center;
   width: 100%;
@@ -1975,14 +2011,21 @@ button.is-emby-button emby-button {
 
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItem {
   justify-content: center;
+  overflow: visible;
 }
-
 
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBody {
   overflow: visible;
   text-overflow: unset;
   white-space: wrap;
   padding-right: 0.75em;
+}
+
+.layout-desktop #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBody,
+.layout-tv #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBody,
+.layout-desktop #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemIcon,
+.layout-tv #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemIcon {
+  transform: translateX(-0.7em);
 }
 
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBodyText {
