--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -5131,14 +5131,14 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   border-radius: var(--rounding);
 }
 
-.mainAnimatedPages,
-.skinBody {
+* {
   scrollbar-width: none;
 }
 
-.mainAnimatedPages::-webkit-scrollbar,
-.skinBody::-webkit-scrollbar {
+*::-webkit-scrollbar {
   display: none;
+  width: 0;
+  height: 0;
 }
 
 .layout-desktop #itemDetailPage:has([data-type="BoxSet"]) .detailSectionContent,
