--- a/Finimalism11.css
+++ b/Finimalism11.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Geom:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root { 
@@ -3305,6 +3304,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   border-radius: var(--rounding);
   transition: max-width 0.2s ease-out 2s, background 1s ease-out 2s, border-color 0.5s ease-out 2s, padding-left 1s ease-out 1s, padding-right 1s ease-out 1s !important;
   height: 14.8em;
+  bottom: 0.1em;
 }
 
 .layout-desktop #itemDetailPage #guestCastCollapsible.verticalSection.detailVerticalSection:hover,
@@ -5187,14 +5187,30 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
   border-radius: var(--rounding);
 }
 
-* {
+.itemsContainer,
+.scrollSlider,
+.emby-scroller,
+.overview {
   scrollbar-width: none;
 }
 
-*::-webkit-scrollbar {
+.itemsContainer::-webkit-scrollbar,
+.scrollSlider::-webkit-scrollbar,
+.emby-scroller::-webkit-scrollbar {
   display: none;
   width: 0;
   height: 0;
+}
+
+.mainAnimatedPages,
+.skinBody {
+  scrollbar-width: auto;
+}
+
+.mainAnimatedPages::-webkit-scrollbar,
+.skinBody::-webkit-scrollbar {
+  display: block;
+  width: 8px;
 }
 
 .layout-desktop #itemDetailPage:has([data-type="BoxSet"]) .detailSectionContent,
